2.4.10

* fixed TRACE custom level to print right lineno in the log message
* created module mappings.py
* added a generic version of _map2info() to mappings.py
* WMS Status plugin Condor queries using the condor python libraries
* Batch Status plugin Condor queries using the condor python libraries
* removed methods not being used from utils.py and condor.py
* new WMSStatus plugin: Queue
* code to shutdown the factory when there are no active queues. Default behavior is not to do it.
* made the classad optional when WMS is Condor, instead of forcing it to be MATCH_APF_QUEUE
* removed unneded import in factory.py that triggered undesired dependency to htcondor
* format of the messages returned by the Sched plugins fixed

2.4.9

* fixed bug in sched plugin StatusOffline not checking if siteinfo is None 

2.4.8

* only reading configuration files that ends with string ".conf"
* simplified the name of plugins modules and classes, and pluginsmanagement code accordingly
* added a new layer to the plugins directory structure
* distinguish between self.keep_running is None than when is 0
* MaxToRun returns 0 when there is no BatchInfo
* added function debugrestart to init script
* added TRACE level to logging systems
* manually merged various changes to loglevels and sched plugins from ec2fixed adhoc branch.
* fixed minor bug with debugrestart when log file doesn't exist
* cleaned up sched plugin messages to be more consistent 
* introduced email notification throttling at factory level per message content

2.4.7 

* port number in case of submit plugin CondorOSGCE not hardcoded. But default is still 9619
* batchqueue was still mandatory in one plugin. Not anymore
* added panda status throttled to the mappings as notready
* some code in proxymanager.py cleaner, and made baseproxy not mandatory
* made the remote_* variables in proxymanager not mandatory, and removed from proxy.conf
* created bin/autopyfactory_version